--- a/DSS_metadata/SEGES.yaml
+++ b/DSS_metadata/SEGES.yaml
@@ -79,7 +79,7 @@ models:
       value: configParameters.dateGs31 ## Could be path.to.property OR e.g. {CURRENT_YEAR}-01-01
     weather_data_period_end: # DEFAULT is FIXED_DATE={CURRENT_YEAR}-12-31
       determined_by: FIXED_DATE ## Could be INPUT_SCHEMA_PROPERTY or FIXED_DATE
-      value: {CURRENT_YEAR}-12-31 ## Could be path.to.property OR e.g. {CURRENT_YEAR}-12-31
+      value: "{CURRENT_YEAR}-12-31" ## Could be path.to.property OR e.g. {CURRENT_YEAR}-12-31
   execution:
     type: ONTHEFLY
     endpoint: https://coremanager.vips.nibio.no/models/SEPTORIAHU/run/ipmd
