--- a/DSS_metadata/SEGES.yaml
+++ b/DSS_metadata/SEGES.yaml
@@ -23,6 +23,7 @@ models:
   - name: Lise N. Jørgensen
     email: lisen.jorgensen@agro.au.dk
     organization: Aarhus University
+  platform_validated: true
   pests:
   - SEPTTR # Zymoseptoria tritici
   - LEPTNO # Parastagonospora nodorum
