Added property "active". Set it to false for MeteoFrance

--- a/weather_data/Weather_data_sources.yaml
+++ b/weather_data/Weather_data_sources.yaml
@@ -422,6 +422,7 @@ datasources:
     endpoint: https://meteofrance.ipmdecisions.nibio.no
     authentication_type: NONE
     needs_data_control: false
+    active: false
     temporal:
       historic: #  
         start: null # Start == null => No measured/historic/observational data
